cleaned up projects from Monday_TODOs, fixed broken links

--- a/public/units/balance/index.html
+++ b/public/units/balance/index.html
@@ -1,46 +1,1 @@
-<div id="units.balance.balanceGrid"></div>
-<script>
-  require(["dojo/store/JsonRest",
-      "gridx/Grid",
-      "gridx/core/model/cache/Async",
-      "gridx/modules/SingleSort",
-      "gridx/modules/extendedSelect/Row"
-      "dojo/domReady!"], function(
-        JsonRest,
-        Grid,
-        Cache,
-        SingleSort,
-        Row) {
-    var grid, query, columns, store;
-
-    columns = [
-      {id: 'eid', field: 'enterpriseId', name: 'Enterprise ID', width: '45px'},
-      {id: 'id', field: 'id', name: 'ID', width: '45px'},
-      {id: 'locked', field: 'accountLocked', name: "Locked", width: '45px'},
-      {id: 'txt', field: 'accountTxt', name: "Account Description", width: '500px'},
-      {id: 'typeid', field: 'accountTypeId', name: 'Account Type ID', width: '10px'},
-      {id: 'category', field: 'accountCategory', name: 'Account Category', width: '45px'}
-    ];
-
-    query = {
-      e :[{t: 'account', c:['enterpriseId', 'id', 'accountLocked', 'accountTxt', 'accountTypeId', 'accountCategory']}]
-    }
-
-    store = new JsonRest({target: 'data/', idProperty: 'id'});
-
-    grid = new Grid({
-        id: 'units.balance.balanceGrid',
-        style: 'height: 100%', 
-        cacheClass: Cache,
-        store: store,
-        query: '?' + JSON.stringify(query),
-        structure: columns,
-        selectRowTriggerOnCell: true,
-        modules: [
-          SingleSort,
-          Row
-        ]
-    }, 'units.balance.balanceGrid');
-
-    grid.startup();
-</script>
+Balance Unit
