--- a/public/units/reports/index.html
+++ b/public/units/reports/index.html
@@ -1,39 +1,1 @@
-<html>
-    <head>
-        <title>GRIDX BIKA</title>
-        <link rel = "stylesheet" type = "text/css" href="../css/transaction.css" media="screen" />
-        <link rel="stylesheet" href="./js/dojoos/dijit/themes/claro/claro.css" media="screen"/>         
-         <script>
-
-         require(["customizedModule/SelectX",
-           "dojo/store/JsonRest",
-           "dojo/domReady!"
-           ], function (SelectX, JsonRest) {
-           	var accountSelect_query = {};
-           	var e = [{t : 'account', c : ['id', 'accountLocked', 'accountTxt', 'accountTypeId', 'accountCategory']}];
-             var c = [{t : 'account', cl : 'enterpriseId', v : 101, z : '='}];
-             accountSelect_query.e = e;
-             accountSelect_query.c = c;
-             var requetteAccount = JSON.stringify(accountSelect_query);
-             var accountSelection_store = new JsonRest({
-                 target: '/data/Account',
-                 getLabel: function (data) {
-                   return (data.id + "-" + data.accountTxt);
-                 }
-               });
-             var accountSelect = new SelectX({
-               store: accountSelection_store,
-               style: "width: 220px; height: 50px", //update this shit
-               query: '?' + requetteAccount,
-               //maxHeight:-1               
-             }, "accountSelects");                
-         });
-  </script>
-
-    </head>
-    <body class = "claro">
-    <div id="accountSelects"></div>      
-    </body>
-</html>   
-
-
+Reports Unit 
